theme/Chicago95-custom/gtk-3.0/gtk-widgets.css
/* ... */
GtkImage,
GtkImage:insensitive,
GtkLabel,
GtkLabel:insensitive,
GtkBox,
GtkBox:insensitive,
GtkGrid,
GtkGrid:insensitive {
    background-color: transparent;
}


/******************
 * visual effects *
 ******************/
/* transitions 
.button {
     transition: border 100ms ease-in-out; 
}

.entry {
    transition: border 100ms ease-out;
}

.entry:focus {
    transition: border 100ms ease-in;
}

.entry.image.left {
    padding-right: 4px;
}

.notebook tab GtkLabel,
.notebook .prelight-page,
.notebook .prelight-page GtkLabel,
.notebook .active-page,
.notebook .active-page GtkLabel {
    transition: all 200ms ease-in;
}
*/

/* inset shadows
.button:active,
.primary-toolbar .button:active,
.toolbar .button:active,
.header-bar .button:active,
.notebook.header {
    box-shadow: inset 10px 0 alpha(@dark_shadow, 0.07),
                inset 0 1px alpha(@dark_shadow, 0.08),
                inset -1px 0 alpha(@dark_shadow, 0.07),
                inset 0 -1px alpha(@dark_shadow, 0.05);
} 

.entry {
    box-shadow: 
}


.button:active *:insensitive,
.primary-toolbar .button:active *:insensitive,
.toolbar .button:active *:insensitive,
.header-bar .button:active *:insensitive,
.entry:insensitive {
    box-shadow: none;
}
 */

/*************
 * assistant *
 *************/
GtkAssistant .sidebar .highlight {
    font: bold;
}

GtkAssistant .sidebar {
    padding: 4px;
    border-width: 0 1px 0 0;
    border-style: solid;
    border-right-color: shade(@theme_bg_color, 0.8);
    border-radius: 0;
    background-color: @theme_bg_color;
    color: mix(@theme_fg_color, @theme_bg_color, 0.1);
}

/**********
 * button *
 **********/
.button {
    padding: 6px 6px 6px 6px;
    border-top: 1px solid #c0c0c0;
    border-left: 1px solid #c0c0c0;
    border-right: 1px solid black;
    border-bottom: 1px solid black;
    box-shadow: inset -1px -1px 0px 0px #808080,
                inset 1px 1px 0px 0px #FFFFFF;
    color: black;
    background-color: #c0c0c0;

}

GtkButton {
    padding: 6px 6px 6px 6px;
    border-top: 1px solid white;
    border-left: 1px solid white;
    border-right: 1px solid black;
    border-bottom: 1px solid black;
    border-radius: 0px;
    color: black;
    background-color: #c0c0c0;
}

.button:hover {
    background-image: none;
}

.button:active,
GtkButton:not(GtkCheckButton):active,
GtkToggleButton:not(GtkCheckButton):checked,
GtkToggleButton:not(GtkCheckButton):insensitive {
    -GtkWidget-focus-padding: 1;
    -GtkWidget-focus-line-width: 1;
    padding: 6px 6px 6px 6px;
    border-top: 1px solid black;
    border-left: 1px solid black;
    border-right: 1px solid white;
    border-bottom: 1px solid white;
    border-radius: 0;
    box-shadow: inset 1px 1px 0px 0px #808080;
    background-color: #c0c0c0;
    background-image: none;
}

GtkCheckButton {
    padding: 0px;
}



/*********
 * focus *
 *********/

.button:focus,
.button:hover:focus,
.button:active:focus,
.button:active:hover:focus,
.button:checked:focus,
.button:checked:hover:focus {
    outline: 1px dotted black;
    outline-radius: 0;
    outline-offset: -3px;
} 

*:focus {
    outline: 1px dotted black;
    outline-radius: 0;
    outline-offset: -1px;
}

.notebook:focus {
    outline: 1px dotted black;
    outline-radius: 0;
    outline-offset: 1px;
} 
/* .button:active:hover {
    border-color: shade(@theme_selected_bg_color, 0.7);
}*/

/*******************
 * cell and row *
 *******************/

.cell {
    border-width: 0;
    border-style: solid;
    border-color: #FFF #000 #000 #FFF;
    
    border-radius: 0;
}

.cell:selected,
.cell:selected:focus {
    background-color: @theme_selected_bg_color;
}

row:selected,
row:selected:hover,
row:selected:focus {
    -GtkWidget-focus-padding: 1;
    -GtkWidget-focus-line-width: 0;
}

/*******************
 * check and radio *
 *******************/
.check,
.radio,
.check:insensitive,
.radio:insensitive {
    border-style: none;
}

GtkCheckButton:hover,
GtkCheckButton:active:hover,
GtkCheckButton:selected,
GtkCheckButton:selected:focus {
    background-color: @bg_color;
}

/*****************
 * column-header *
 *****************/

column-header .button {
    padding: 6px 6px 6px 6px;
    border-top: 1px solid #c0c0c0;
    border-left: 1px solid #c0c0c0;
    border-right: 1px solid black;
    border-bottom: 1px solid black;
    box-shadow: inset -1px -1px 0px 0px #808080,
                inset 1px 1px 0px 0px #FFFFFF;
    color: black;
    background-color: #c0c0c0;
}

column-header .button:active {
    padding: 6px 6px 6px 6px;
    border-top: 1px solid #000000;
    border-left: 1px solid #000000;
    border-right: 1px solid #FFFFFF;
    border-bottom: 1px solid #FFFFFF;
    box-shadow: inset 1px 1px 0px 0px #808080;
    color: black;
    background-color: #c0c0c0;
}


/****************
 * content view *
 ****************/

.content-view.view {
    background-color: @theme_base_color;
}

.content-view.view:prelight {
    background-color: alpha(@theme_selected_bg_color, 0.6);
}

.content-view.view:selected,
.content-view.view:active {
    background-color: @theme_selected_bg_color;
}

.content-view.view:insensitive {
    background-color: shade(@theme_base_color, 0.9);
}

GdMainIconView.content-view {
    -GdMainIconView-icon-size: 40;
}

GtkIconView.content-view.check {
    background-color: transparent;
}

GtkIconView.content-view.check:active {
    background-color: transparent;
}

.content-view.view.check,
.content-view.view.check:active {
    background-color: transparent;
}

GtkIconView.content-view.check:prelight,
GtkIconView.content-view.check:insensitive,
GtkIconView.content-view.check:selected {
    background-color: transparent;
}

/****************
 * drawing area *
 ****************/

GtkDrawingArea {
    background-color: transparent;
}

GtkDrawingArea:insensitive {
    background-color: shade(@theme_base_color, 0.9);
}

/***********
 * gtkhtml *
 ***********/

GtkHTML {
    background-color: @theme_base_color;
    color: @theme_text_color;
}
/* ... */

